--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 <body>
-    <p>Projeto criado nas aulas do Curso em video HTML/CSS - Módulo 4</p>
+    <p>Projeto criado nas aulas do <a href="https://www.cursoemvideo.com/">Curso em vídeo</a> <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dkcVCk2Bn_fdVQ81Fkrh6WT">HTML/CSS - Módulo 4</a></p>
 
     <main>
         <section id="telefone">
